# project-zorg

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py
core/: __init__.py  achievements.py  elemental_system.py  enemy_ai.py  engine.py  exceptions.py  models.py  object_factory.py
core/managers/: __init__.py  audio_manager.py  base_manager.py  cache_manager.py  combat_manager.py  crafting_manager.py  event_manager.py  inventory_manager.py  random_event_manager.py  save_manager.py  tutorial_manager.py
data/: __init__.py  abilities.py  enemies.py  equipment.py  items.py  loaders.py  npcs.py  reward_tables.py
scenes/: __init__.py
scenes/phase_scripts/: __init__.py  phase1.py  phase10.py  phase2.py  phase3.py  phase4.py  phase5.py  phase6.py  phase7.py  phase8.py  phase9.py
screens/: __init__.py  character_creation_screen.py  city_screen.py  combat_screen.py  game_screen.py  item_screen.py  main_menu.py  npc_screen.py  settings_screen.py  shop_screen.py  skill_screen.py  story_screen.py  victory_screen.py
scripts/: code_quality.py  run_tests.py
tests/: __init__.py  conftest.py  test_engine.py  test_managers.py  test_models.py
ui/screens/: attribute_distribution_screen.py  detailed_status_screen.py  enhanced_shop_screen.py
ui/styles/: __init__.py  global_styles.py
utils/: __init__.py  error_handler.py  logging_config.py  save_load.py  security.py
widgets/: __init__.py  status_bar.py
